--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.3",
-    "@mui/material": "^5.15.3",
+    "@mui/material": "^5.15.4",
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
+    "@mui/x-data-grid": "^6.18.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
